--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="banner">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
     <div class="banner-content max-length text-center">
-      <div>
+      <div class="gutter-2">
         <h1 class="push-0">Space & Time Explorer Person</h1>
         <p class="giga">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
